--- a/packages/playground/index.html
+++ b/packages/playground/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>@vue-portal/playground</title>
+  <title>@promise-portal/playground</title>
 </head>
 
 <body>
