--- a/packages/playground/index.html
+++ b/packages/playground/index.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Promise Portal Playground</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <title>@promise-portal/playground</title>
-</head>
-
-<body>
-  <div id="app"></div>
-  <div id="app2"></div>
-  <script type="module" src="/src/main.ts"></script>
-</body>
-
+  <body>
+    <div id="app"></div>
+    <div id="app2"></div>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
